2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.ui: Remove useless 'View' menu. 
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-source.c: When importing a PGP key make
    sure to refresh imported keys synchronously. This fixes problems 
    returning the list of keys that were imported.
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-transfer-operation.c: Add proper destroy
    callback for gchar* 
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS:
    * README: New version 0.9.2
    * configure.in: Update version number
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-transfer-operation.c: Remove bum 
    destroy callback for gpgme_data_t. 
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-keyserver-sync.c: Small fix when somehow no keys
    are found to sync. Displays '0 keys selected for syncing'
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-prefs.glade: Better messages when 
    either SSH agent or GPG agent not in order.
    
2006-08-16  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/tests/Makefile.am: Link properly so libcryptui
    dependencies get pulled in.
    * libcryptui/cryptui-key-store.c: Allow use of empty string 
    for 'no signer'. 
    * libcryptui/cryptui-key-list.c: Added translatable strings.
    
2006-08-13  Nate Nielsen  <nielsen@memberwebs.com>

    * Merged changes from seahorse-0-8 branch.
    
2006-08-03  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-service-crypto.c:
    * daemon/seahorse-service-keyset.c:
    * daemon/seahorse-service.c:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-default-key-control.c: