@@ -1,5 +1,14 @@
 2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-key-store.c:
+    * libseahorse/seahorse-key-store.h:
+    * libseahorse/seahorse-keyset.c:
+    * libseahorse/seahorse-key-manager-store.c:
+    * libseahorse/seahorse-key-manager.c: Select keys after importing.
+    Fixes #338287
+    
+2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>
+
     * src/seahorse-key-manager.c:
     * src/seahorse-key-manager.ui: Remove useless 'View' menu. 
     
